--- a/vignettes/vignette_o2geosocial.Rmd
+++ b/vignettes/vignette_o2geosocial.Rmd
@@ -32,7 +32,7 @@ The package *o2geosocial* uses Rcpp to incorporate C++ functions into a R framew
 
 In *o2geosocial* the genetic component of the likelihood is a binary value depending on the genotype of the cases. There can be only one genotype reported per transmission tree, hence the number of trees will be at least equal to the number of unique genotypes reported in the dataset. The genotype of a tree T is the genotype reported for at least one of the cases belonging to T. For each genotyped case $i_{gen}$ and at every iteration, only cases from trees with the same genotype as $i_{gen}$, or without reported genotype should be listed as potential infectors. Therefore, ungenotyped cases belonging to a tree with a different genotype will not be potential infectors of $i_{gen}$ at this iteration. Ungenotyped cases can be placed on any tree.
 
-Routinely collected surveillance data may include thousands of cases from unrelated outbreaks. Therefore, it was crucial to speed up the algorithm. We added a pre-clustering step to the function `outbreaker()` to reduce the pool of potential infectors for each case, which can greatly reduce the computing time of the MCMC (Figure 1). In the pre-clustering step, the potential infectors for each case are listed. Cases with overlapping potential infectors, and their potential infectors, are grouped together. Cases from different groups cannot infect one another. The group each case belongs to is listed in the variable is_cluster in `outbreaker_data()`. We used three criterions to group together cases that can be connected: For each case $i$, only cases reported in a radius of $\gamma$ km, less than $\delta$ days before $i$, and from similar or unreported genotype can be classified as potential infectors of $i$. The parameter $\gamma$ and $\delta$ should be defined in the function `create_config()`.
+Routinely collected surveillance data may include thousands of cases from unrelated outbreaks. Therefore, it was crucial to speed up the algorithm. We added a pre-clustering step to the function `outbreaker()` to reduce the pool of potential infectors for each case, which can greatly reduce the computing time of the MCMC (Figure 1). In the pre-clustering step, the potential infectors for each case are listed. Cases with overlapping potential infectors, and their potential infectors, are grouped together. Cases from different groups cannot infect one another. The group each case belongs to is listed in the variable is_cluster in `outbreaker_data()`. We used three criteria to group together cases that can be connected: For each case $i$, only cases reported in a radius of $\gamma$ km, less than $\delta$ days before $i$, and from similar or unreported genotype can be classified as potential infectors of $i$. The parameter $\gamma$ and $\delta$ should be defined in the function `create_config()`.
 
 Cases classified in the same group after the pre-clustering stage may still be unrelated (e.g. if several importations were reported simultaneously in the nearby region). We need to define a likelihood threshold $\lambda$ which quantifies what is an unlikely connection. If the likelihood of connection between cases $i$ and $j$ is worse than $\lambda$, we consider it is more likely that $i$ was an import, unrelated to $j$. In *o2geosocial*, the variable $\lambda$ can either be an absolute (the likelihood threshold will be $log(\lambda)$) or relative value (a quantile of the likelihood of all connections in all samples), and is defined by the variables 'outlier_threshold' and the boolean 'outlier_relative' in `create_config()`. If the initial number of importations is minimal, unlikely connections between cases can alter the inferred infection dates of cases and bias the generated transmission trees. Therefore, first we run a short MCMC and compute $n$, the minimum number of connections worse than $\lambda$ in the samples; then we add $n$ imports to the starting tree and run a long MCMC. Finally, we remove the connections worse than $\lambda$ in the final samples and return the infector, infection date and probability of being an import for each case (Figure 1). 
 
@@ -378,7 +378,7 @@ unlink(temp)
 
 We are interested in two outputs of the models:  i) the number of import per region, and ii) the geographical distribution of the average number of the secondary cases per case in each model. 
 
-We compute the proportion of iterations where each case was an import in out1 and out2. The element `tree` of `summary(out1)` gives the most likely infector, the proportion of iterations where the index is the most likely infector (i.e. the support of the connection) and the median number of generations between the two cases, the most likely infection date and the chances of being an import for each case. We therefore add the columns `prop_infer1` and `prop_infer2` to dt_cases. As the import status is not inferred in `out2`, `prop_infer2` is a binary value, and is the same as `dt_cases$import`.
+We compute the proportion of iterations where each case was an import in out1 and out2. The element `tree` of `summary(out1)` gives the most likely infector, the proportion of iterations where the index is the most likely infector (i.e. the support of the connection) and the median number of generations between the two cases, the most likely infection date and the chances of being an import for each case. We therefore add the columns `prop_infer1` and `prop_infer2` to `dt_cases`. As the import status is not inferred in `out2`, `prop_infer2` is a binary value, and is the same as `dt_cases$import`.
 
 ```{r n_import_reg_per_case, warning = FALSE}
 # Add the proportion of iteration in model 1 where each case is an import
@@ -483,7 +483,7 @@ This model is actually similar to the power-law gravity model, with a two differ
   
   * There's only one spatial parameter $a$ to estimate.
 
-First, we create the intial distance matrix in the Stouffer's rank model `dist_mat_stouffer`:
+First, we create the initial distance matrix in the Stouffer's rank model `dist_mat_stouffer`:
 
 ```{r create_stouff_matrix, message = FALSE, warning = FALSE}
 # For every column of the distance matrix, use the cumulative sum of the 
@@ -642,5 +642,5 @@ plot(sort(index_clust_stouf), type = "l", ylab = "Proportion", xlab = "Case",
 
 The R package *o2geosocial* is a new tool for data analysis building upon the framework developed in [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html). It is highly flexible and only requires routinely collected surveillance data. It can be used to identify large transmission clusters and highlight the dynamics of transmission in different regions. An application of the algorithm on a small geographical scale was presented in the tutorial, it can also be used to study datasets of cases scattered across larger areas. The methods presented in the tutorial can be applied to the second dataset included in the package `toy_outbreak_long`, which includes more than 1900 cases simulated in the United States. The computation time increases with the number of regions and the number of cases, so the MCMC runs will be longer.
 
-We showed how the model could be edited to implement a range of mobility models. Describing human mobility during infectious diseases outbreaks can be challeging, and the performances of the models depend on the setting studied. The package can be extended to take into account the variety of existing mobility models. We encourage the development of extensions and the use of *o2geosocial* to study different pathogens and settings. We believe a wide use of *o2geosocial* could maximise what can be reconstructed from routinely collected data and epidemiological investigations and improve out understandin of outbreak dynamics. 
+We showed how the model could be edited to implement a range of mobility models. Describing human mobility during infectious diseases outbreaks can be challenging, and the performances of the models depend on the setting studied. The package can be extended to take into account the variety of existing mobility models. We encourage the development of extensions and the use of *o2geosocial* to study different pathogens and settings. We believe a wide use of *o2geosocial* could maximise what can be reconstructed from routinely collected data and epidemiological investigations and improve out understanding of outbreak dynamics. 
 
