--- a/vignettes/o2geosocial.Rmd
+++ b/vignettes/o2geosocial.Rmd
@@ -357,7 +357,7 @@ library(ggplot2)
 temp <- tempfile()
 download.file(
   "https://www2.census.gov/geo/tiger/GENZ2018/shp/cb_2018_39_tract_500k.zip",
-  temp)
+  temp, method = "libcurl")
 ```
 
 We then extract the shapefile from the zip archive, read it using the package [*sf*](https://cran.r-project.org/web/packages/sf/index.html) and create one background map for each model.
