Use canonical form CRAN URL

--- a/vignettes/o2geosocial.Rmd
+++ b/vignettes/o2geosocial.Rmd
@@ -22,13 +22,13 @@ Individual transmission events during an outbreak give valuable information on t
 
 As regional immunity against infectious diseases is built up by past infections and, if a vaccine is available, vaccination campaigns, social and spatial heterogeneity in disease incidence or vaccine coverage lead to under-immunised areas (pockets of susceptibles). Importation of cases into these areas can cause large transmission clusters and long-lasting outbreaks. The most vulnerable areas of a country could be identified using historical data on local vaccine coverage and incidence, but these data can be scarce or unreliable. Another solution is to infer probabilistic transmission trees and clusters in order to identify in which regions importations repeatedly caused large transmission clusters.  
 
-The Wallinga-Teunis method was developed to infer probabilistic transmission trees from onset dates, serial interval and latent periods in a maximum likelihood framework. As genetic sequencing of cases during an outbreak became more common, new tools such as the R package [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html) showed that combining the timing of infection and the genetic sequences could improve the accuracy of inferred transmission trees. Nevertheless, sequencing cases remains costly, and the efficacy of the reconstruction methods depends on the proportion of sequenced cases, the quality of the sequences, and on the characteristics of the virus. For instance, the measles virus evolves very slowly, so sequences from unrelated cases can be very similar, which makes methods combining onset dates and genetic sequences ineffective.  
+The Wallinga-Teunis method was developed to infer probabilistic transmission trees from onset dates, serial interval and latent periods in a maximum likelihood framework. As genetic sequencing of cases during an outbreak became more common, new tools such as the R package [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2) showed that combining the timing of infection and the genetic sequences could improve the accuracy of inferred transmission trees. Nevertheless, sequencing cases remains costly, and the efficacy of the reconstruction methods depends on the proportion of sequenced cases, the quality of the sequences, and on the characteristics of the virus. For instance, the measles virus evolves very slowly, so sequences from unrelated cases can be very similar, which makes methods combining onset dates and genetic sequences ineffective.  
 
-Building upon the framework presented in [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html), we developed the R package *o2geosocial* to estimate the cluster size distribution from the onset date, age, location and genotype of the cases. Those variables are generally collected by surveillance systems and well reported. Using age-stratified contact matrices and mobility models, we combined the different variables into a likelihood of connection between cases. The package *o2geosocial* is ideal to study outbreaks where sequences are uninformative, either because only a small proportion of cases were sequenced or because the virus evolves too slowly. In this vignette, we first introduce the overall structure of *o2geosocial*, the components of the individual likelihood and the parameters; then we present a tutorial on how to develop a model to reconstruct the cluster size distribution with *o2geosocial*.  
+Building upon the framework presented in [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2), we developed the R package *o2geosocial* to estimate the cluster size distribution from the onset date, age, location and genotype of the cases. Those variables are generally collected by surveillance systems and well reported. Using age-stratified contact matrices and mobility models, we combined the different variables into a likelihood of connection between cases. The package *o2geosocial* is ideal to study outbreaks where sequences are uninformative, either because only a small proportion of cases were sequenced or because the virus evolves too slowly. In this vignette, we first introduce the overall structure of *o2geosocial*, the components of the individual likelihood and the parameters; then we present a tutorial on how to develop a model to reconstruct the cluster size distribution with *o2geosocial*.  
 
 # Implementation 
 ## Overall structure
-The package *o2geosocial* uses Rcpp to incorporate C++ functions into a R framework. The general implementation of *o2geosocial* follows the structure of [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html): the main function of the package, so-called `outbreaker()`, takes five lists as inputs: i) 'moves', ii) 'likelihoods', iii) 'priors', iv) 'data', and v) 'config'. These five lists can be generated and modified using the functions `custom_moves()`, `custom_likelihoods()`, `custom_priors()`, `create_config()` and `outbreaker_data()`. The function `outbreaker()` uses Monte Carlo Markov Chains (MCMC) to sample from the posterior distribution, and infer the infection date, the infector, and the number of missing generations for each case. The package *o2geosocial* was designed to study datasets that include a large number of potentially unrelated cases and without information on the genetic sequence of cases, hence there are major differences between the implementation of *o2geosocial* and [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html).
+The package *o2geosocial* uses Rcpp to incorporate C++ functions into a R framework. The general implementation of *o2geosocial* follows the structure of [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2): the main function of the package, so-called `outbreaker()`, takes five lists as inputs: i) 'moves', ii) 'likelihoods', iii) 'priors', iv) 'data', and v) 'config'. These five lists can be generated and modified using the functions `custom_moves()`, `custom_likelihoods()`, `custom_priors()`, `create_config()` and `outbreaker_data()`. The function `outbreaker()` uses Monte Carlo Markov Chains (MCMC) to sample from the posterior distribution, and infer the infection date, the infector, and the number of missing generations for each case. The package *o2geosocial* was designed to study datasets that include a large number of potentially unrelated cases and without information on the genetic sequence of cases, hence there are major differences between the implementation of *o2geosocial* and [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2).
 
 In *o2geosocial* the genetic component of the likelihood is a binary value depending on the genotype of the cases. There can be only one genotype reported per transmission tree, hence the number of trees will be at least equal to the number of unique genotypes reported in the dataset. The genotype of a tree T is the genotype reported for at least one of the cases belonging to T. For each genotyped case $i_{gen}$ and at every iteration, only cases from trees with the same genotype as $i_{gen}$, or without reported genotype should be listed as potential infectors. Therefore, ungenotyped cases belonging to a tree with a different genotype will not be potential infectors of $i_{gen}$ at this iteration. Ungenotyped cases can be placed on any tree.
 
@@ -59,7 +59,7 @@ Therefore, ungenotyped cases may not be potential infector if they belong to a t
 
 ### Conditional report ratio
 
-Like in the packages [*outbreaker*](https://cran.r-project.org/web/packages/outbreaker/index.html) and [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html), we consider there can be missing cases in transmission chains. The number of generations between linked case $\kappa_{ji}$ is equal to one if $j$ infected $i$. We define $\rho$ as the conditional report ratio of the trees. The conditional report ratio is not the same as the overall report ratio of an outbreak, since entirely unreported clusters, or missing cases before the ancestor of a tree will not change the value of $\rho$. Only unreported cases within transmission chains will impact the conditional report ratio. By default, the probability of observing $\kappa_{ji}$ missing generation between $i$ and $j$ from the conditional report ratio $p(\kappa_{ji} | \rho)$ follows an exponential distribution. 
+Like in the packages [*outbreaker*]( https://CRAN.R-project.org/package=outbreaker) and [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2), we consider there can be missing cases in transmission chains. The number of generations between linked case $\kappa_{ji}$ is equal to one if $j$ infected $i$. We define $\rho$ as the conditional report ratio of the trees. The conditional report ratio is not the same as the overall report ratio of an outbreak, since entirely unreported clusters, or missing cases before the ancestor of a tree will not change the value of $\rho$. Only unreported cases within transmission chains will impact the conditional report ratio. By default, the probability of observing $\kappa_{ji}$ missing generation between $i$ and $j$ from the conditional report ratio $p(\kappa_{ji} | \rho)$ follows an exponential distribution. 
 
 The conditional report ratio is estimated during the MCMC runs, it follows a beta distribution. 
 
@@ -93,7 +93,7 @@ $$L_ji(t_i,t_j,\theta)=log(\rho(\kappa_{ji}|\rho)*w^{\kappa_{ji}}(t_i-t_j)*a^{\k
 
 ## Movements
 
-At every iteration of the MCMC, a set of movements is used to propose an update of the transmission trees. This update is then accepted or rejected depending on the posterior value of the new trees. In *o2geosocial*, eight default movements are tested at each iteration. Three of them were already part of [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html) and were not modified (`cpp_move_t_inf()` to change the infection date of cases; `cpp_move_pi()` to change the conditional report ratio; `cpp_move_kappa()` to change the number of generations between connected cases); two were edited to add the scanning of the transmissions trees to prevent from having different genotypes in the same tree (`cpp_move_alpha()`. `cpp_move_swap_cases()`); The last three are new movements and were not part of [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html):
+At every iteration of the MCMC, a set of movements is used to propose an update of the transmission trees. This update is then accepted or rejected depending on the posterior value of the new trees. In *o2geosocial*, eight default movements are tested at each iteration. Three of them were already part of [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2) and were not modified (`cpp_move_t_inf()` to change the infection date of cases; `cpp_move_pi()` to change the conditional report ratio; `cpp_move_kappa()` to change the number of generations between connected cases); two were edited to add the scanning of the transmissions trees to prevent from having different genotypes in the same tree (`cpp_move_alpha()`. `cpp_move_swap_cases()`); The last three are new movements and were not part of [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2):
 
   * `cpp_move_a()` and `cpp_move_b()` propose new values of the spatial parameters $a$ and $b$ and compute the matrix of probability of connection between regions.
 
@@ -137,7 +137,7 @@ f_dens <- dgamma(x = 1:100, scale = 0.43, shape = 26.83)
 w_dens <- dnorm(x = 1:100, mean = 11.7, sd = 2.0)
 ```
 
-The age specific social contact patterns can be imported from the element `age_contact` of the list `toy_outbreak_short`. Alternatively, one can use the R package [*socialmixr*](https://cran.r-project.org/package=socialmixr) to import a social contact matrix from the POLYMOD survey.
+The age specific social contact patterns can be imported from the element `age_contact` of the list `toy_outbreak_short`. Alternatively, one can use the R package [*socialmixr*](https://CRAN.R-project.org/package=socialmixr) to import a social contact matrix from the POLYMOD survey.
 
 ```{r age, message = FALSE, warning = FALSE}
 # From the list toy_outbreak_short  
@@ -155,7 +155,7 @@ polymod_matrix <-data.table::as.data.table(polymod_matrix)
 a_dens <- t(t(polymod_matrix)/colSums(polymod_matrix))
 ```
 
-Finally, the distance matrix between regions is set up from the data table `dt_regions`, element of `toy_outbreak_short`. We use the column `population` to set up the population vector `pop_vect`. We compute the distance between each region into the distance matrix `dist_mat` from the R package [*geosphere*](https://cran.r-project.org/web/packages/geosphere/geosphere.pdf). 
+Finally, the distance matrix between regions is set up from the data table `dt_regions`, element of `toy_outbreak_short`. We use the column `population` to set up the population vector `pop_vect`. We compute the distance between each region into the distance matrix `dist_mat` from the R package [*geosphere*](https://CRAN.R-project.org/package=geosphere). 
 
 ```{r distance_pop, warning=FALSE}
 # Extract all regions in the territory
@@ -347,9 +347,9 @@ legend("bottomright", col = grey.colors(3)[1:2], lwd = 3, bty = "n",
 
 ### Interpretation of the results
 
-In this section, we want to generate two maps to observe the geographical distribution of the importations, and the average number of secondary cases per region in `out1` and `out2`. The maps will be generated using the package [*ggplot2*](https://cran.r-project.org/web/packages/ggplot2/)
+In this section, we want to generate two maps to observe the geographical distribution of the importations, and the average number of secondary cases per region in `out1` and `out2`. The maps will be generated using the package [*ggplot2*]( https://CRAN.R-project.org/package=ggplot2)
 
-First, we retrieve the boundary files of the census tract in Ohio. They will be used to generate the background of the maps, and are available using the library [*tigris*](https://cran.r-project.org/web/packages/tigris/). The boundary files are also available on the website [*census.gov*](https://www2.census.gov). We import them in a format compatible with the package [*sf*](https://cran.r-project.org/web/packages/sf/index.html) and create one background map for each model.
+First, we retrieve the boundary files of the census tract in Ohio. They will be used to generate the background of the maps, and are available using the library [*tigris*](https://CRAN.R-project.org/package=tigris). The boundary files are also available on the website [*census.gov*](https://www2.census.gov). We import them in a format compatible with the package [*sf*](https://CRAN.R-project.org/package=sf) and create one background map for each model.
 
 
 ```{r import_sf_file, message = FALSE, warning = FALSE, fig.width = 6.5, fig.height = 2.5}
@@ -487,7 +487,7 @@ gamma <- max(dist_mat_stouffer) + 1
 dist_mat_stouffer[dist_mat_stouffer == -1] <- max(dist_mat_stouffer) * 2
 ```
 
-We now write the function `cpp_stouffer_move_a` to replace the default movement function `cpp_move_a`. As the Stouffer's rank and the power law gravity models are close, we do not need to re-write `cpp_log_like`, the default function to compute the probability matrix. For other distance models, it may be required to create a new version of `cpp_log_like` and call it in the movement function. In `cpp_stouffer_move_a`, there is no parameter $b$, both spatial parameters are equal to $a$. We use the package [*Rcpp*](https://cran.r-project.org/web/packages/Rcpp/index.html) to source the new movement function.
+We now write the function `cpp_stouffer_move_a` to replace the default movement function `cpp_move_a`. As the Stouffer's rank and the power law gravity models are close, we do not need to re-write `cpp_log_like`, the default function to compute the probability matrix. For other distance models, it may be required to create a new version of `cpp_log_like` and call it in the movement function. In `cpp_stouffer_move_a`, there is no parameter $b$, both spatial parameters are equal to $a$. We use the package [*Rcpp*](https://CRAN.R-project.org/package=Rcpp) to source the new movement function.
 
 ```{Rcpp stouffer_model, message = FALSE, warning= FALSE}
 // [[Rcpp::depends(o2geosocial)]]
@@ -626,7 +626,7 @@ plot(sort(index_clust_stouf), type = "l", ylab = "Proportion", xlab = "Case",
 
 # Conclusion
 
-The R package *o2geosocial* is a new tool for data analysis building upon the framework developed in [*outbreaker2*](https://www.repidemicsconsortium.org/outbreaker2/index.html). It is highly flexible and only requires routinely collected surveillance data. It can be used to identify large transmission clusters and highlight the dynamics of transmission in different regions. An application of the algorithm on a small geographical scale was presented in the tutorial, it can also be used to study datasets of cases scattered across larger areas. The methods presented in the tutorial can be applied to the second dataset included in the package `toy_outbreak_long`, which includes more than 1900 cases simulated in the United States. The computation time increases with the number of regions and the number of cases, so the MCMC runs will be longer.
+The R package *o2geosocial* is a new tool for data analysis building upon the framework developed in [*outbreaker2*](https://CRAN.R-project.org/package=outbreaker2). It is highly flexible and only requires routinely collected surveillance data. It can be used to identify large transmission clusters and highlight the dynamics of transmission in different regions. An application of the algorithm on a small geographical scale was presented in the tutorial, it can also be used to study datasets of cases scattered across larger areas. The methods presented in the tutorial can be applied to the second dataset included in the package `toy_outbreak_long`, which includes more than 1900 cases simulated in the United States. The computation time increases with the number of regions and the number of cases, so the MCMC runs will be longer.
 
 We showed how the model could be edited to implement a range of mobility models. Describing human mobility during infectious diseases outbreaks can be challenging, and the performances of the models depend on the setting studied. The package can be extended to take into account the variety of existing mobility models. We encourage the development of extensions and the use of *o2geosocial* to study different pathogens and settings. We believe a wide use of *o2geosocial* could maximise what can be reconstructed from routinely collected data and epidemiological investigations and improve out understanding of outbreak dynamics. 
 
